--- a/css/stylus/general.styl
+++ b/css/stylus/general.styl
@@ -4,6 +4,10 @@ global-reset()
 
 reset-html5()
 
+del
+  text-decoration line-through
+
+
 @import "pygments"
 
 .opentip-container.style-drop
@@ -106,7 +110,6 @@ blockquote
   box-shadow 2px 2px 15px #e5e5e5
   p
     padding 8px 25px
-
 
 
 .columns
