--- a/css/stylus/opentip.styl
+++ b/css/stylus/opentip.styl
@@ -26,7 +26,7 @@
     color #4F4B47
     text-shadow -1px -1px 0px rgba(255, 255, 255, 0.2)
 
-    header
+    .header
       margin 0
       padding 0
 
