--- a/css/layout.css
+++ b/css/layout.css
@@ -1,10 +1,11 @@
-#main,#footer,#header > div{width:page-width;margin:0 auto;position:relative}
+#main,#social,#footer,#header > div{width:page-width;margin:0 auto;position:relative}
 #header{position:fixed;top:0;left:0;right:0;background:#f2f2f2 url("../images/grain.png") fixed repeat left top;display:block;z-index:1000;}
 #header #header-shadow,#header #header-shadow-line{opacity:0;transition:opacity .5s ease-in-out;}
 body.scroll #header #header-shadow,body.scroll #header #header-shadow-line{opacity:1}
-#header #logo{display:block;absolute:top left -90px;transition:top .5s ease-in-out;background:url("../images/logo.png") no-repeat left top;width:360px;height:162px;z-index:200;}
-#header #logo span{display:none}
-body.scroll #header #logo{top:-30px}
+#header #name{margin:0;padding:0;display:block;absolute:top left -90px;z-index:200;transition:top .5s ease-in-out;width:360px;height:162px;}
+body.scroll #header #name{top:-30px}
+#header #name a{display:block;}
+#header #name a span{display:none}
 #header hr{margin-bottom:0;margin-top:0}
 #header #header-shadow{width:800px;height:20px;absolute:bottom left 50%;margin-left:-400px;border-radius:100%;box-shadow:0 0 30px rgba(0,0,0,0.2)}
 #header nav{font-family:"Raleway","Helvetica neue",sans-serif;font-weight:100;font-size:20px;line-height:150%;display:block;position:relative;text-align:right;height:75px;background:#f2f2f2 url("../images/grain.png") repeat left top;z-index:100;}
@@ -22,4 +23,5 @@ body.scroll #header nav ul{top:23px}
 .columns{margin-top:140px;margin-bottom:140px}
 #show-your-work{margin-top:10px;min-height:200px;}
 #show-your-work img{float:left;position:relative;top:-20px;margin-right:20px}
+#social{margin-top:80px}
 #footer{color:#aaa}
