--- a/css/general.css
+++ b/css/general.css
@@ -30,7 +30,7 @@ p a,ul a{color:#00a;text-decoration:none;-webkit-transition:color .2s ease-in-ou
 p a:hover,ul a:hover{color:#00f}
 hr{position:relative;height:1px;background:#dadada;background:-webkit-gradient(linear, left top, right top, color-stop(0, rgba(0,0,0,0)), color-stop(0.05, rgba(0,0,0,0.1)), color-stop(0.95, rgba(0,0,0,0.1)), color-stop(1, rgba(0,0,0,0)));background:-webkit-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:-moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:-o-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:-ms-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);border:none;margin:60px 0;margin-left:-25px;width:1010px}
 code{font-family:menlo,monospace}
-p > code,li > code{border:1px dotted #cbe3c5;background:#eff5ee;padding:1px 2px;color:#7fa475}
+p > code,li > code,td > code{border:1px dotted #cbe3c5;background:#eff5ee;padding:1px 2px;color:#7fa475}
 pre{margin:30px 0}
 p{color:#333}
 strong{font-weight:bold}
@@ -42,6 +42,10 @@ blockquote p{padding:8px 25px}
 .columns .right{width:50%;float:right;padding-left:40px}
 .columns:before,.columns:after{content:"";display:table}
 .columns:after{clear:both}
+table{border:1px solid #ddd;-webkit-box-shadow:1px 1px 20px #eee;box-shadow:1px 1px 20px #eee;}
+table thead th{border-bottom:1px solid #ddd;background:#fafafa;font-weight:bold;color:#555;padding:8px 10px}
+table td{padding:5px 10px;border-bottom:1px solid #eee}
+table tr:nth-child(odd) td{background:#f8f8f8}
 #main,#social,#footer,#header > div{width:960px;margin:0 auto;position:relative}
 #header{position:fixed;top:0;left:0;right:0;background:#f2f2f2 url("../images/grain.png") fixed repeat left top;display:block;z-index:1000;}
 #header #header-shadow,#header #header-shadow-line{opacity:0;-ms-filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=0);filter:alpha(opacity=0);-webkit-transition:opacity .5s ease-in-out;-moz-transition:opacity .5s ease-in-out;-o-transition:opacity .5s ease-in-out;-ms-transition:opacity .5s ease-in-out;transition:opacity .5s ease-in-out;}
