--- a/css/stylus/general.styl
+++ b/css/stylus/general.styl
@@ -96,6 +96,12 @@ td > code
 
 pre
   margin 30px 0
+  margin 30px 0
+  border 1px solid #DDD
+  padding 8px 12px
+  background white
+  border-radius 2px
+  box-shadow 1px 1px 9px #EAEAEA
 
 p
   color #333
