--- a/js/components/enyo-opentip/css/opentip.css
+++ b/js/components/enyo-opentip/css/opentip.css
@@ -15,6 +15,9 @@
   transition: none;
   pointer-events: none;
 }
+.opentip-container.fixed {
+  pointer-events: auto;
+}
 .opentip-container.hidden {
   display: none;
 }
@@ -26,7 +29,7 @@
   color: #4f4b47;
   text-shadow: -1px -1px 0px rgba(255,255,255,0.2);
 }
-.opentip-container .opentip header {
+.opentip-container .opentip .header {
   margin: 0;
   padding: 0;
 }
