--- a/css/stylus/general.styl
+++ b/css/stylus/general.styl
@@ -119,6 +119,21 @@ blockquote
     padding 8px 25px
 
 
+button
+  border-radius 3px
+  font-size 1em
+  color #888
+  border 1px solid #ddd
+  box-shadow 1px 1px 8px #ddd
+  padding 8px 10px
+  background-color #fafafa
+  background-image linear-gradient(top, #fafafa, #eee)
+  cursor pointer
+  &:hover
+    background-color #eaeaea
+    background-image linear-gradient(top, #fafafa, #e6e6e6)
+
+
 .columns
   .left
     width 50%
