--- a/css/layout.css
+++ b/css/layout.css
@@ -17,9 +17,9 @@ body.scroll #header nav ul{top:23px}
 #header nav ul li a:hover{color:rgba(0,0,0,0.8)}
 #main{padding-top:180px;}
 #main #intro{font-size:36px;margin:20px 0;color:rgba(0,0,0,0.4)}
-#demo-boxes .box{background:#e1f3f3;background:linear-gradient(top,#f1f7f0,#d3f0f6);width:300px;height:180px;padding:25px 35px;border-radius:5px;box-shadow:1px 1px 12px rgba(0,0,0,0.1);float:left;margin:10px;}
-#demo-boxes .box h2{margin:0 0 10px 0}
-#demo-boxes .box p{color:#5b6262}
+.demo-boxes .box{background:#e1f3f3;background:linear-gradient(top,#f1f7f0,#d3f0f6);width:300px;height:180px;padding:25px 35px;border-radius:5px;box-shadow:1px 1px 12px rgba(0,0,0,0.1);float:left;margin:10px;}
+.demo-boxes .box h2{margin:0 0 10px 0}
+.demo-boxes .box p{color:#5b6262}
 .columns{margin-top:140px;margin-bottom:140px}
 #show-your-work{margin-top:10px;min-height:200px;}
 #show-your-work img{float:left;position:relative;top:-20px;margin-right:20px}
