--- a/css/stylus/layout.styl
+++ b/css/stylus/layout.styl
@@ -65,6 +65,10 @@
     z-index 100
 
     ul
+      @media all and (max-width: 1200px)
+        absolute top 50px right 120px
+        
+
       absolute top 50px right
       margin 0
       padding 0
