Fixed the doc examples.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 
     <script type="text/javascript" src="js/build/build.js?v=2"></script>
     <script type="text/javascript">
-      require("boot");
+      window.App = require("boot");
     </script>
 
 
