The shadow isn't clickable anymore now.
Fixes #25

--- a/css/stylus/opentip.styl
+++ b/css/stylus/opentip.styl
@@ -37,7 +37,8 @@
   &.fixed
     // When it's fixed, the close button, and links inside the tooltip should
     // be clickable
-    pointer-events auto
+    .opentip
+      pointer-events auto
 
   &.hidden
     display none
