--- a/css/opentip.css
+++ b/css/opentip.css
@@ -129,13 +129,15 @@
 .opentip-container.loading .loading-indicator {
   display: block;
 }
-.opentip-container.style-dark .opentip,
-.opentip-container.style-alert .opentip {
+.opentip-container.style-dark .opentip *,
+.opentip-container.style-alert .opentip * {
   color: #f8f8f8;
   text-shadow: 1px 1px 0px rgba(0,0,0,0.2);
 }
 .opentip-container.style-glass .opentip {
   padding: 15px 25px;
+}
+.opentip-container.style-glass .opentip * {
   color: #317cc5;
   text-shadow: 1px 1px 8px rgba(0,94,153,0.3);
 }
