--- a/css/stylus/opentip.styl
+++ b/css/stylus/opentip.styl
@@ -1,7 +1,7 @@
 @import "nib"
 
 
-@keyframes loading
+@keyframes otloading
   from
     transform rotate(0deg)
   to
@@ -21,10 +21,10 @@
 
 
 
-  &.fixed
-    &.hidden
-    &.going-to-show
-    &.hiding
+  &.ot-fixed
+    &.ot-hidden
+    &.ot-going-to-show
+    &.ot-hiding
       &.stem-top.stem-center
         transform translateY(-5px) 
       &.stem-top.stem-right
@@ -42,13 +42,13 @@
       &.stem-top.stem-left
         transform translateY(-5px) translateX(-5px)
 
-  &.fixed
+  &.ot-fixed
     // When it's fixed, the close button, and links inside the tooltip should
     // be clickable
     .opentip
       pointer-events auto
 
-  &.hidden
+  &.ot-hidden
     display none
 
   .opentip
@@ -63,7 +63,7 @@
       margin 0
       padding 0
 
-    .close
+    .ot-close
       pointer-events auto
       display block
       absolute top -12px left 60px
@@ -74,11 +74,11 @@
       span
         display none
 
-    .loading-indicator
+    .ot-loading-indicator
       display none
 
-  &.loading
-    .loading-indicator
+  &.ot-loading
+    .ot-loading-indicator
       width 30px
       height @width
       font-size @width
@@ -87,7 +87,7 @@
       display block
       span
         display block
-        animation loading 2s linear infinite
+        animation otloading 2s linear infinite
         text-align center
 
 
@@ -109,19 +109,19 @@
 
   // Effects
   // =======
-  &.hide-effect-fade
+  &.ot-hide-effect-fade
     transition transform 0.5s ease-in-out, opacity 1s ease-in-out
     opacity 1
-    &.hiding
+    &.ot-hiding
       opacity 0
 
-  &.show-effect-appear
-    &.going-to-show
-    &.showing
+  &.ot-show-effect-appear
+    &.ot-going-to-show
+    &.ot-showing
       transition transform 0.5s ease-in-out, opacity 1s ease-in-out
-    &.going-to-show
+    &.ot-going-to-show
       opacity 0
-    &.showing
+    &.ot-showing
       opacity 1
-    &.visible
+    &.ot-visible
       opacity 1
