--- a/test/views/playground.jade
+++ b/test/views/playground.jade
@@ -19,21 +19,21 @@ head
   //- != js('src/adapter.ender')
 
 
-  //- != js('lib/jquery-1.8.0')
+  // != js('lib/jquery-1.8.0')
   //- script
   //-   jQuery.noConflict()
   //- != js('lib/prototype-1.7.1')
   
-  != js('downloads/opentip-native-excanvas.js')
+  // != js('downloads/opentip-native-excanvas.js')
   //- != js('downloads/opentip-native.js')
   //- != js('excanvas')
   //- != js('src/opentip')
   //- != js('src/adapter.native')
 
-  //- != js('src/adapter.jquery')
+  != js('src/opentip')
+  // != js('src/adapter.jquery')
 
-  //- != js('src/opentip')
-  //- != js('src/adapter.native')
+  != js('src/adapter.native')
 
 
   :coffeescript
