Corrected the .remove() native adapter function.

--- a/test/views/playground.jade
+++ b/test/views/playground.jade
@@ -51,6 +51,7 @@ head
         # closeButtonOffset: [ -5, 0 ]
         # closeButtonCrossLineWidth: 2.4
         # closeButtonCrossSize: 5
+        removeElementsOnHide: yes
 
       # window.x=$(".opentip-test2").opentip("Hallo test", { target: true, tipJoint: "right", borderWidth: 0  })
 
